@@ -1,13 +1,16 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.4.0
 
-  *) Amend apr_reslist to expire resources whose idle time exceeds ttl.
-     PR 42841 [Tom Donovan, Nick Kew, Ruediger Pluem]
+  *) apr_reslist: destroy all resources in apr_cleanup.
+      PR 45086 [Nick Kew]
 
   *) Add DTrace Probes to Hooks, making it easier to inspect APR Hook based
      applications with DTrace. [Theo Schlossnagle <jesus omniti.com>]
 
 Changes with APR-util 1.3.0
+
+  *) Amend apr_reslist to expire resources whose idle time exceeds ttl.
+     PR 42841 [Tom Donovan, Nick Kew, Ruediger Pluem]
 
   *) Modularize ldap's stub with the dbd dso modular structure, and teach
      the apu dso's to respect the system specific shared lib path var.
